# ATP

./: CMakeLists.txt  config.linux  environment.sh  readme.md
include/: ATP.h  ATPConfigSearch.h  ATPSearch.h  bandwidth.h  comm_engine.h  cublas_alias.h  ga.h  initializer.h  liveness.h  mem_control.h  network.h  registry.h  solver.h  stream_singleton.h  tensor.h
include/layer/: base_layer.h  base_network_layer.h  base_structure_layer.h  batch_normalization_layer.h  concat_layer.h  ctcloss_layer.h  cudnn_activation_layer.h  cudnn_convolution_layer.h  cudnn_pooling_layer.h  data_layer.h  dropout_layer.h  fork_layer.h  fully_connected_layer.h  join_layer.h  layer_normalization_layer.h  local_response_norm_layer.h  padding_layer.h  rnn_layer.h  self_attn_layer.h  softmax_layer.h
include/util/: ATP_math.h  base_reader.h  binary_dumper.h  chainer.h  common.h  image_reader.h  lru.h  mem_util.h  parallel_reader.h  preprocess.h  print_util.h  saver.h  tensor_queue.h  thread_routine.h
src/: ATPSearch.cpp  CMakeLists.txt  comm_engine.cpp  initializer.cpp  liveness.cpp  mem_control.cpp  network.cpp  registry.cpp  solver.cpp  solver.cu  stream_singleton.cpp  tensor.cpp  tensor.cu
src/layer/: base_layer.cpp  base_network_layer.cpp  base_structure_layer.cpp  batch_normalization_layer.cpp  concat_layer.cpp  ctcloss_layer.cpp  cudnn_activation_layer.cpp  cudnn_convolution_layer.cpp  cudnn_pooling_layer.cpp  data_layer.cpp  dropout_layer.cpp  fork_layer.cpp  fully_connected_layer.cpp  join_layer.cpp  layer_normalization_layer.cpp  local_response_norm_layer.cpp  padding_layer.cpp  padding_layer.cu  rnn_layer.cpp  self_attn_layer.cpp  softmax_layer.cpp  softmax_layer.cu
src/util/: base_reader.cpp  binary_dumper.cpp  chainer.cpp  image_reader.cpp  lru.cpp  parallel_reader.cpp  preprocess.cpp  saver.cpp  tensor_queue.cpp
testing/: CMakeLists.txt  gpt1-v100-32g.cpp  gru64-v100-32g.cpp  lstm64-v100-32g.cpp  resnet1022-v100-32g.cpp  resnet512-v100-32g.cpp  rnn64-v100-32g.cpp
testing/unittest/: CMakeLists.txt  data_transformer_test.cpp  label_bin_test.cpp  mempool_test.cpp  preprocess_test.cpp  tensor_test.cpp
tools/: CMakeLists.txt  compute_image_mean.cpp  convert_cifar10.cpp  convert_cifar100.cpp  convert_jpeg.cpp  convert_mnist.cpp
tools/export_caffe/: main.py  solvers.py
